# mapeval

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARK_DESIGN.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  README.md  binance_data_source.py  config.example.yaml  config.py  data_analyst.py  data_manager.py  docker-compose.yml  generate_pdf.py  llm_agent.py  log_manager.py  main.py  mapeval.py  output.txt  pyproject.toml  reporter.py  requirements.txt  sample_financial_data.csv  tools.py  trading_engine.py  trading_module.py
.github/workflows/: ci.yml
benchmark/: README.md  data_collector.py
benchmark/evaluators/: benchmark_runner.py
benchmark/results/: benchmark_deepseek_deepseek-chat_20260116_221347.json
benchmark/test_suites/: consistency.json  risk_awareness.json  signal_recognition.json
reports/: benchmark_report.json  benchmark_report.md
scripts/: fix_editable_pth.py
scripts/manual/: README.md  deepseek_smoke.py  openai_smoke.py  qwen_smoke.py
src/: adaptive_interval.py  api_server.py  async_llm_agent.py  backtester.py  binance_data_source.py  binance_futures_client.py  binance_ws.py  config.py  config_models.py  data_manager.py  database.py  event_bus.py  events.py  exchange.py  exposure_utils.py  factor_evaluator.py  interfaces.py  llm_agent.py  log_manager.py  main.py  mock_data.py  order_executor.py  performance_analyzer.py  portfolio_risk_controller.py  reporter.py  repositories.py  requirements.txt  risk_manager.py  security.py  tools.py  trading_engine.py  tui_reporter.py
src/logs/: session_deepseek_20251025_105358.087353_30655_llm_decisions.jsonl  session_openai_20251025_105336.934929_30529_llm_decisions.jsonl
src/mapeval/: __init__.py  api_server.py  async_llm_agent.py  backtester.py  binance_data_source.py  binance_futures_client.py  cache_manager.py  cli.py  config.py  data_manager.py  database.py  db_models.py  event_bus.py  exchange.py  exposure_utils.py  llm_agent.py  main.py  notifier.py  order_executor.py  order_models.py  performance_analyzer.py  position_sizer.py  rate_limiter.py  repositories.py  security.py  signal_evaluator.py  stop_loss_manager.py  structured_logging.py  trading_engine.py  tui_reporter.py
src/mapeval/strategies/: __init__.py  base.py  llm_strategy.py  technical_strategy.py
src/strategies/: __init__.py  llm_strategy.py  technical_strategy.py
test/: Qwen.py  binance_test.py  config.py  deepseek.py  openai_test.py
tests/: test_api_server.py  test_binance_futures_client.py  test_cache_manager.py  test_data_manager.py  test_llm_agent.py  test_main.py  test_performance_improvements.py  test_position_sizer.py  test_refactored_shared.py  test_risk_manager.py  test_signal_evaluator.py  test_stop_loss_manager.py  test_tools.py  test_trading_engine.py
